--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,23 @@ android {
     compileSdkVersion 22
     buildToolsVersion "23.0.0 rc2"
 
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
+
     defaultConfig {
         applicationId "uk.co.droidinactu.mssubmissiontracker"
         minSdkVersion 19
         targetSdkVersion 22
         versionCode 1
-        versionName "1.0"
+        versionName "0.0.1.0"
     }
     buildTypes {
         release {
@@ -22,4 +33,12 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.google.android.gms:play-services:7.5.0'
+    compile 'com.android.support:support-v4:22.2.0'
+    compile 'joda-time:joda-time:2.8'
+    compile 'com.percolate:caffeine:0.3.3'
+    compile 'com.google.android.gms:play-services-gcm:7.3.0'
+    compile 'com.google.code.gson:gson:2.3'
+    compile 'com.github.satyan:sugar:1.3+'
+    compile 'org.apache.commons:commons-csv:1.1'
 }
